--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,28 @@
+:root {
+    --dark-theme-background-color: #060606;
+    --light-theme-background-color: hsl(0, 0%, 96%);
+    --dark-theme-button-bg-color: #191919;
+    --light-theme-button-color: #E0E0E0;
+    --dark-theme-text-color: #dbdbdb;
+}
 .App {
-  text-align: center;
-}
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    gap: 10px;
+    /* LIGHT THEME BACKGROUND COLOR */
+    /* background-color: hsl(0, 0%, 96%); */ 
+    background-color: var(--dark-theme-background-color);
+    max-height: 100vh;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    /* overflow: scroll; */
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App .Page {
+    height:100vh;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    /* En tant qu'enfant de .App */
+    flex-grow: 1;
 }
