--- a/client/src/components/InfosModal/InfosModal.css
+++ b/client/src/components/InfosModal/InfosModal.css
@@ -31,7 +31,7 @@
     padding: 0;
 }
 #infos-modal-header-left h4 {
-    font-family: 20px;
+    font-size: 24px;
 }
 
 #infos-modal-header-left button {
@@ -43,8 +43,6 @@
     border:none;
     color: #E0E0E0;
     margin: 4px;
-    /* width: 25px; */
-    /* height: 25px; */
 }
 #infos-modal-header h4 {
     font-size: 16px;
@@ -66,18 +64,60 @@
 /* BODY */
 #infos-modal-body {
     font-size: 12px;
-    padding: 0 66px;
+    padding: 0 70px;
     font-weight: 400;
+}
+#infos-modal-body :first-child {
+    margin-top: 0;
 }
 #infos-modal-footer {
     /* display: flex; */
     /* flex-direction: row; */
     /* align-content: flex-end; */
     text-align: right;
+    align-content: flex-end;
+    margin: 14px 0;
+    font-size: 1rem;
     /* align-content: end; */
     /* border:1px dashed orange; */
 }
 #infos-modal-footer-page-cursor {
-    width: fit-content;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 24px;
+    gap: 4px;
+    /* height: 22px; */
+    /* width: 80px; */
     /* border:1px dashed orangered; */
 }
+#infos-modal-footer-page-cursor :first-child,
+#infos-modal-footer-page-cursor :last-child {
+    width: 28px;
+    /* background-color: purple; */
+}
+#infos-modal-footer-page-cursor button {
+    background-color: #161616;
+    color: #8E8E8E;
+    font-size: 1.2rem;
+    /* width: 24px; */
+    border: 1px solid #707070;
+    border-radius: 8px;
+}
+#infos-modal-footer-page-indicator {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 2px;
+    /* border:1px solid orange; */
+}
+#infos-modal-footer-page-indicator div {
+    text-align: center;
+    /* border:1px solid blue; */
+    /* margin: 0; */
+    /* padding: 0; */
+
+}
+/* #infos-modal-footer-page-cursor span {
+
+} */
