--- a/client/src/footer/Footer.css
+++ b/client/src/footer/Footer.css
@@ -1,37 +1,54 @@
 footer {
-    display:flex;
+    display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding:8px;
-    height:fit-content;
+    /* border: 1px solid purple; */
+    /* height: 2.5rem; */
+    margin: 0;
+    padding: 0 10px;
     color: var(--dark-theme-text-color);
+    font-family: 'Instrument Sans', sans-serif;
 }
+
 footer .footer-page-toggler {
     display: flex;
     align-items: center;
-    cursor:pointer;
+    cursor: pointer;
     height: fit-content;
-}
-footer .footer-page-toggler p {
-    padding-left: 4px;
-    font-size: 14px;
+    gap: 6px;
+    /* border:1px solid orangered; */
     margin: 0;
+    padding: 0;
 }
+
+footer .footer-page-toggler p {
+    /* padding-left: 4px; */
+    font-size: 14px;
+    /* padding: 0; */
+    /* margin: 5%; */
+    margin: 8px 0;
+    /* border:1px solid purple; */
+    /* margin: 0; */
+}
+
 footer .footer-page-toggler .toggler-icon {
     font-size: 18px;
 }
+
 footer .footer-links {
-    display:flex;
+    display: flex;
     flex-direction: row;
     align-items: center;
     height: fit-content;
     gap: 8px;
 }
+
 footer .footer-links a {
     font-size: 14px;
     color: hsl(200, 55%, 50%);
 }
+
 footer .footer-links a .icon {
     font-size: 17px;
 }
