--- a/client/src/components/DetailsModal/DetailsModal.css
+++ b/client/src/components/DetailsModal/DetailsModal.css
@@ -56,7 +56,7 @@
 /* BODY */
 #met-details-modal-body {
     font-size: 14px;
-    padding: 16px 66px;
+    padding: 0 66px 16px 66px;
 }
 #met-details-modal-body table tbody tr td:nth-child(2) {
     font-weight: 500;
