--- a/client/src/components/map/LeafletComponentMap/LeafletComponentMap.css
+++ b/client/src/components/map/LeafletComponentMap/LeafletComponentMap.css
@@ -25,3 +25,15 @@
     color: #E0E0E0;
     margin: 0;
 }
+.marker-popup .info-btn {
+    background-color: #0D0D0D;
+    border: 1px solid #E0E0E0;
+    color: #E0E0E0;
+    width: 100%;
+    border-radius: 4px;
+    padding: 4px;
+}
+.marker-popup .info-btn:hover {
+    background-color: #282828;
+}
+
